# pathfinder_1st_ed

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/tables/: Ability Score Costs.json  Ability Score Points.json  Ammo.json  Bonus Spells per Day (by Spell Level).json  Character Advancement and Level-Dependent Bonuses.json  Character Classes.json  Coins.json  Core Races.json  Feats.json  Magic Schools.json  Magic Spell Descriptors.json  Skill Check Bonuses.json  Skill Ranks.json  Skill Summary.json  Starting Character Wealth.json  Tiny and Large Weapon Damage.json  Trade Goods.json  Weapons.json  sources.md
src/: ability.py  alignment.py  categories.py  character.py  character_class.py  equipment.py  exceptions.py  inventory.py  level.py  magic.py  race.py  saving_throw.py
src/character/: __init__.py
src/character_class/: __init__.py  barbarian.py
src/race/: __init__.py
src/skill/: __init__.py
tests/: test_character.py  test_race.py
tests/integration/: test_full_character.py  test_qarsus.py
tests/unit/: test_ability.py  test_character.py  test_character_class.py  test_inventory.py  test_race.py  test_saving_throw.py
