[project]
name = "pathfinder-1st-ed"
version = "0.1.0"
description = ""
authors = [{ name = "Bas Bloemsaat", email = "bas@bloemsaat.org" }]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = ["pydantic (>=2.11.7,<3.0.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-watcher = "^0.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
